# financial-agents-system

./: .env.example  .gitignore  README.md  pyproject.toml
documents/: CHN_NEWS_sentiment.csv  CSI100.csv  CSI300.csv  build_combined_thesis.py  中证100指数历史数据.xlsx  沪深300历史数据.xlsx
fin_agents_system/backend/: ablation.py  baselines.py  config.py  diagnostics.py  ensemble_model.py  latex_tables.py  log_config.yaml  main.py  model_metrics.csv  paper_experiments.py  paper_figure_refresh.py  prediction_results.csv  test_websocket.py  visualization.py
fin_agents_system/backend/agents/: backtester.py  base_agent.py  data_engineer.py  sentiment_analyst.py  technical_analyst.py
fin_agents_system/backend/graph/: workflow.py
fin_agents_system/backend/models/: database.py  schemas.py
fin_agents_system/backend/outputs/: CSI100_prediction_metrics.csv  CSI100_prediction_results.csv  CSI300_prediction_metrics.csv  CSI300_prediction_results.csv  csi100_ablation_results.csv  final_ablation.csv  (+3 more)
fin_agents_system/frontend/: app.js  index.html  style.css
init-scripts/: backend-start.bat  frontend-start.bat
outputs/: CSI100_classifier_model.weights.h5  CSI100_prediction_metrics.csv  CSI100_prediction_results.csv  CSI100_regression_model.weights.h5  CSI300_classifier_model.weights.h5  CSI300_prediction_metrics.csv  CSI300_prediction_results.csv  CSI300_regression_model.weights.h5  ablation_results.csv  ablation_results_v2.csv  ablation_results_v3.csv  baseline_comparison.csv  baseline_comparison_v2.csv  baseline_comparison_v3.csv  final_ablation.csv  final_baseline_comparison.csv
(+14 files in other folders)
